--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
                         <div class="content-div dark-card-shadow">
                             <div class="frow centered">
                                 <div class="frow column-center">
-                                    <h1>Hi, welcome to <span class="company-name">RPScales Consulting</span></h1>
-                                    <h3>While our website is under construction, feel free to:</h3>
+                                    <h1>Welcome to <span class="company-name">RPScales, LLC.</span></h1>
+                                    <h3>consulting services for advisers, investment companies and related financial services firms</h3>
+                                    <h3>While our website is under construction, feel free to contact Bob Scales:</h3>
                                     <span class="email-link card-shadow">
                                         <script type="text/javascript">
                                         //<![CDATA[
